# oclint

./: .gitignore  CMakeLists.txt
oclint-driver/: main.cpp
oclint-rules/rules/: CMakeLists.txt
oclint-rules/rules/style/: BinaryOperatorStyleRule.cpp  CMakeLists.txt  CompoundStatementStyleRule.cpp  ObjCMethodDeclStyleRule.cpp
test/: CMakeLists.txt  main.cpp  test.m
