CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(OCLINT)

SET(CMAKE_MODULE_PATH
    ${CMAKE_MODULE_PATH}
    "${CMAKE_CURRENT_SOURCE_DIR}/oclint-core/cmake"
    )

SET(OCLINT_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/oclint-core")
SET(OCLINT_METRICS_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/oclint-metrics")
SET(OCLINT_RULES_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/oclint-rules")

INCLUDE(OCLintConfig)

INCLUDE_DIRECTORIES(
    ${OCLINT_SOURCE_DIR}/include
    ${OCLINT_METRICS_SOURCE_DIR}/include
    ${OCLINT_RULES_SOURCE_DIR}/include
    ${OCLINT_RULES_SOURCE_DIR}
    )

ADD_SUBDIRECTORY(oclint-core)
ADD_SUBDIRECTORY(oclint-metrics)
ADD_SUBDIRECTORY(oclint-rules)
ADD_SUBDIRECTORY(test)
